--- a/day2/index.html
+++ b/day2/index.html
@@ -16,17 +16,28 @@
      <!-- <center></center> -->
       <!-- Horizantal line -->
        <!-- </hr> -->
-    <p>html is basic language</p>
+    <p>html is basic language after we will learn css..then<br>we will learn java Script</p>
       <hr>
       <!-- <ul> </ul> -->
       <ul>
-        <p>eat</p>
-        <p>learn</p>
-        <p>sleep</p>
+        <p>this is unordered list</p>
+        <li>A</li>
+        <li>B</li>
+        <li>C</li>
+        <li>eat</li>
+        <li>learn</li>
+        <li>sleep</li>
       </ul>
       <!-- <ol></ol> -->
-      <ol> <p>learn</p><p> java,frontend</p></ol>
-      <pre>this is  preserve formatting tag&nbsp;</pre>
+      <ol> 
+        <p>this is ordered list</p>
+        <li>A</li>
+        <li>B</li>
+        <li>C</li>
+        <li>eat</li>
+        <li>learn</li>
+        <li>sleep</li>
+      <pre>this is  preserve formatting tag</pre>
       <p> i'm writing non-breaking &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;space</p>
 </body>
 </html>
