--- a/day4/table.html
+++ b/day4/table.html
@@ -6,11 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-   <table border="1">
+   <table border="1" cellpadding="10" cellspacing="10">
     <tr>
         <td>College</td>
-        <td>department</td>
-        <td>stdName</td>
+        <td>Department</td>
+        <td>StdName</td>
     </tr>
     <tr>
         <td>Gprec</td>
