--- a/day5/login.html
+++ b/day5/login.html
@@ -13,11 +13,20 @@
       </form> 
       <br>
       <form action="" method=""></form>  
+      <label for="Email">Email</label>
+        <input type="Email" placeholder="Enter Email" required/>
+    </form>
+     <br>
+     <br>
+     <form action="" method=""></form>  
       <label for="Password">Password</label>
-        <input id="password" placeholder="Enter Password"/>
+        <input type="password" placeholder="Enter Password" required/>
     </form>
     <br>
     <br>
+    <button type="submit">Login</button>
+
     <a href="signup.html"> Please Sign In</a>  
+
 </body>
 </html>
