--- a/Test1/second.html
+++ b/Test1/second.html
@@ -9,7 +9,7 @@
 
     <h2>Registration Form</h2>
     
-    <form action="/submit-registration" method="POST">
+    <form action=" " method=" ">
         <!-- Name Field -->
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
