--- a/homework 1/home.html
+++ b/homework 1/home.html
@@ -14,7 +14,7 @@
         <img src="images.jpeg" alt="Logo" width="50" height="50" style="vertical-align: middle;">
         <strong style="color: white; font-size: 1.5em; margin-left: 10px;">INDUCE</strong>
       </td>
-      <td align="left">
+      <td align="right">
         <a href="home.html" style="color: white; text-decoration: none; margin: 0 15px;">Home</a>
         <a href="about.html" style="color: white; text-decoration: none; margin: 0 15px;">About Us</a>
         <a href="contact.html" style="color: white; text-decoration: none; margin: 0 15px;">Contact</a>
