--- a/nov14_Task/gradient_conical.html
+++ b/nov14_Task/gradient_conical.html
@@ -6,7 +6,7 @@
   height: 200px;
   width: 200px;
   background-color: red; /* For browsers that do not support gradients */
-  background-image: conic-gradient(red, yellow, green);
+  background-image: conic-gradient(rgb(0, 242, 255), yellow, green);
 }
 </style>
 </head>
