--- a/nov14_Task/gradient_radial.html
+++ b/nov14_Task/gradient_radial.html
@@ -6,14 +6,14 @@
   height: 150px;
   width: 200px;
   background-color: red; /* For browsers that do not support gradients */
-  background-image: radial-gradient(red, yellow, green);
+  background-image: radial-gradient(rgb(212, 19, 170), yellow, green);
 }
 
 #grad2 {
   height: 150px;
   width: 200px;
   background-color: red; /* For browsers that do not support gradients */
-  background-image: radial-gradient(circle, red, yellow, green);
+  background-image: radial-gradient(circle, rgb(18, 34, 213), yellow, green);
 }
 </style>
 </head>
@@ -21,7 +21,7 @@
 
 <h1>Radial Gradient - Shapes</h1>
 
-<h2>Ellipse (this is default):</h2>
+<h2>Ellipse :</h2>
 <div id="grad1"></div>
 
 <h2><strong>Circle:</strong></h2>
